--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <script src="./public/js/commons.js"></script>
   <script src="./public/js/faceDetectionControls.js"></script>
   <link rel="stylesheet" href="./public/css/styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.css">
+  <link rel="stylesheet" href="./public/css/materialize.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <script src="./public/js/materialize.min.js"></script>
 </head>
 <body>
   <h4>人臉識別Demo</h4>
