--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="./public/js/faceDetectionControls.js"></script>
   <link rel="stylesheet" href="./public/css/styles.css">
   <link rel="stylesheet" href="./public/css/materialize.css">
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="./public/js/jquery-2.1.1.min.js"></script>
   <script src="./public/js/materialize.min.js"></script>
 </head>
 <body>
